Fix test continuation

--- a/esl_portal/esl_app/templates/esl_app/some_test.html
+++ b/esl_portal/esl_app/templates/esl_app/some_test.html
@@ -33,9 +33,9 @@
                 <h3>{{some_test.aspect}}</h3>
                 {% if is_started %}
                     {% if is_completed %}
-                        <button id="restart-button">Перепройти</button>
+                        <button id="start-button">Перепройти</button>
                     {% else %}
-                        <button id="resume-button">Продолжить выполнение</button>
+                        <button id="start-button">Продолжить выполнение</button>
                     {% endif %}
                 {% else %}
                     <button id="start-button">Начать выполнение</button>
