--- a/esl_portal/esl_app/templates/esl_app/profile.html
+++ b/esl_portal/esl_app/templates/esl_app/profile.html
@@ -1,1 +1,5 @@
 {# TODO: write profile template #}
+<h1>Profile</h1>
+<h2>{{ user.username }}</h2>
+<a href="{% url 'completed' %}">Пройденные тесты</a>
+<a href="{% url 'options' %}">Настройки</a>
