--- a/esl_portal/esl_app/templates/esl_app/main.html
+++ b/esl_portal/esl_app/templates/esl_app/main.html
@@ -8,45 +8,20 @@
     <title>Main</title>
 </head>
 <body>
-<header class="header">
-    <div class="container">
-        <div class="header__inner">
-            <div class="header__logo"></div>
-
-            <nav class="nav">
-                <a class="nav__link active" href="{% url 'tests' %}">Тесты</a>
-                {% if is_authenticated %}
-                    <a class="nav__link" href="{% url 'profile' %}">Профиль</a>
-                    <a class="nav__link" href="{% url 'logout' %}">Выйти</a>
-                {% else %}
-                    <a class="nav__link" href="{% url 'login' %}">Вход</a>
-                    <a class="nav__link" href="{% url 'register' %}">Регистрация</a>
-                {% endif %}
-            </nav>
-        </div>
-    </div>
-</header>
 
 
-<div class="intro">
-    <div class="container">
-        <div class="intro__inner">
-            <h1 class="intro__title">Тесты на знание "English language"</h1>
-            <a class="btn" href="{% url 'tests' %}">Начать решать</a>
-        </div>
-    </div>
+{#            <nav class="nav">#}
+{#                <a class="nav__link active" href="{% url 'tests' %}">Тесты</a>#}
+{#                {% if is_authenticated %}#}
+{#                    <a class="nav__link" href="{% url 'profile' %}">Профиль</a>#}
+{#                    <a class="nav__link" href="{% url 'logout' %}">Выйти</a>#}
+{#                {% else %}#}
+{#                    <a class="nav__link" href="{% url 'login' %}">Вход</a>#}
+{#                    <a class="nav__link" href="{% url 'register' %}">Регистрация</a>#}
+{#                {% endif %}#}
+{#            </nav>#}
 
-    <div class="slider">
-        <div class="container">
-            <div class="slider__inner">
-                <div class="slider__item ">
-                </div>
-                <div class="slider__item">
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
+{#            <a class="btn" href="{% url 'tests' %}">Начать решать</a>#}
 
 
 </body>
