Add clean functions to forms for validation

--- a/esl_portal/esl_app/templates/esl_app/register.html
+++ b/esl_portal/esl_app/templates/esl_app/register.html
@@ -13,28 +13,28 @@
   </head>
   <body class="text-center bg-light">
      <main class="form-signin">
-          <form method="post" action="{% url 'login' %}" class="needs-validation" novalidate>
+          <form method="post" action="{% url 'register' %}" class="needs-validation" novalidate>
               {% csrf_token %}
             <a href="{% url 'main' %}"><img class="mb-1" src="{% static 'esl_app/english.png' %}" alt="" width="100" height="100"></a>
-            <h1 class="h3 mb-3 fw-normal">Вход</h1>
+            <h1 class="h3 mb-3 fw-normal">Регистрация</h1>
 
             <div class="form-floating mb-2">
-              <input type="text" class="form-control" id="floatingInput {{ form.username.id_for_label }}" placeholder="name@example.com" name="{{ form.username.html_name }}">
-              <label for="floatingInput">{{ form.username.label }}</label>
+              <input type="email" class="form-control" id="floatingInput {{ user_form.email.id_for_label }}" placeholder="name@example.com" name="{{ user_form.email.html_name }}">
+              <label for="{{ user_form.email.id_for_label }}">{{ user_form.email.label }}</label>
+                {% if user_form.email.errors %}
+                    {% for error in user_form.email.errors %}
+                        <p>{{ error }}</p>
+                    {% endfor %}
+                {% endif %}
             </div>
             <div class="form-floating">
-              <input type="password" class="form-control" id="floatingPassword {{ form.password.id_for_label }}" placeholder="Password" name="{{ form.password.html_name }}">
-              <label for="floatingPassword">{{ form.password.label }}</label>
+              <input type="password" class="form-control" id="floatingPassword {{ user_form.password.id_for_label }}" placeholder="Password" name="{{ user_form.password.html_name }}">
+              <label for="{{ user_form.password.id_for_label }}">{{ form.password.label }}</label>
             </div>
-            <button class="w-100 btn btn-lg btn-primary" type="submit">Войти</button>
+            <button class="w-100 btn btn-lg btn-primary" type="submit">Регистрация</button>
             <div class="container mt-3">
                 <a class="text-info" href="{% url 'main' %}">Вернуться на главную</a>
             </div>
-              {% if wrong_credentials %}
-                <div class="container mt-3">
-                    <p class="text-danger">Неверное имя пользователя и/или пароль</p>
-                </div>
-              {% endif %}
           </form>
      </main>
 
