--- a/esl_portal/esl_app/templates/esl_app/register.html
+++ b/esl_portal/esl_app/templates/esl_app/register.html
@@ -22,14 +22,44 @@
               <input type="email" class="form-control" id="floatingInput {{ user_form.email.id_for_label }}" placeholder="name@example.com" name="{{ user_form.email.html_name }}">
               <label for="{{ user_form.email.id_for_label }}">{{ user_form.email.label }}</label>
                 {% if user_form.email.errors %}
-                    {% for error in user_form.email.errors %}
+                    <p>Некорректный формат адреса электронной почты</p>
+                {% endif %}
+            </div>
+          <div class="form-floating mb-2">
+              <input type="text" class="form-control" id="floatingPassword {{ user_form.username.id_for_label }}" placeholder="Password" name="{{ user_form.username.html_name }}">
+              <label for="{{ user_form.username.id_for_label }}">{{ user_form.username.label }}</label>
+                {% if user_form.username.errors %}
+                    {% for error in user_form.username.errors %}
                         <p>{{ error }}</p>
                     {% endfor %}
                 {% endif %}
             </div>
-            <div class="form-floating">
+          <div class="form-floating mb-2">
+              <input type="text" class="form-control" id="floatingPassword {{ user_form.first_name.id_for_label }}" placeholder="Password" name="{{ user_form.first_name.html_name }}">
+              <label for="{{ user_form.first_name.id_for_label }}">{{ user_form.first_name.label }}</label>
+                {% if user_form.first_name.errors %}
+                    {% for error in user_form.first_name.errors %}
+                        <p>{{ error }}</p>
+                    {% endfor %}
+                {% endif %}
+            </div>
+            <div class="form-floating mb-2">
               <input type="password" class="form-control" id="floatingPassword {{ user_form.password.id_for_label }}" placeholder="Password" name="{{ user_form.password.html_name }}">
-              <label for="{{ user_form.password.id_for_label }}">{{ form.password.label }}</label>
+              <label for="{{ user_form.password.id_for_label }}">{{ user_form.password.label }}</label>
+                {% if user_form.password.errors %}
+                    {% for error in user_form.password.errors %}
+                        <p>{{ error }}</p>
+                    {% endfor %}
+                {% endif %}
+            </div>
+          <div class="form-floating mb-2">
+              <input type="password" class="form-control" id="floatingPassword {{ user_form.password2.id_for_label }}" placeholder="Password" name="{{ user_form.password2.html_name }}">
+              <label for="{{ user_form.password2.id_for_label }}">{{ user_form.password2.label }}</label>
+                {% if user_form.password2.errors %}
+                    {% for error in user_form.password2.errors %}
+                        <p>{{ error }}</p>
+                    {% endfor %}
+                {% endif %}
             </div>
             <button class="w-100 btn btn-lg btn-primary" type="submit">Регистрация</button>
             <div class="container mt-3">
@@ -37,40 +67,5 @@
             </div>
           </form>
      </main>
-
-{#<main class="form-signin">#}
-{#  <form method="post" action="{% url 'register' %}">#}
-{#    {% csrf_token %}#}
-{#    <h1 class="h3 mb-3 fw-normal">Регистрация</h1>#}
-{##}
-{#    <div class="form-floating">#}
-{#      <input type="text" class="form-control" id="floatingInput {{ user_form.username.id_for_label }}" placeholder="user_name" name="{{ user_form.username.html_name }}">#}
-{#      <label for="floatingPassword">{{ user_form.username.label }}</label>#}
-{#    </div>#}
-{#    <div class="form-floating">#}
-{#      <input type="email" class="form-control" id="floatingInput {{ user_form.email.id_for_label }}" placeholder="name@example.com" name="{{ user_form.email.html_name }}">#}
-{#      <label for="floatingInput">{{ user_form.email.label }} </label>#}
-{#    </div>#}
-{#      <div class="form-floating">#}
-{#      <input type="text" class="form-control" id="floatingInput {{ user_form.first_name.id_for_label }}" placeholder="Ivan" name="{{ user_form.first_name.html_name }}">#}
-{#      <label for="floatingInput">{{ user_form.first_name.label }} </label>#}
-{#    </div>#}
-{#    <div class="form-floating">#}
-{#      <input type="password" class="form-control" id="floatingPassword {{ user_form.password.id_for_label }}" placeholder="Password" name="{{ user_form.password.html_name }}">#}
-{#      <label for="floatingPassword">{{ user_form.password.label }}</label>#}
-{#    </div>#}
-{#    <div class="form-floating">#}
-{#      <input type="password" class="form-control" id="floatingPassword {{ user_form.password2.id_for_label }}" placeholder="Password" name="{{ user_form.password2.html_name }}">#}
-{#      <label for="floatingPassword">{{ user_form.password2.label }}</label>#}
-{#    </div>#}
-{##}
-{##}
-{#    <div class="checkbox mb-3">#}
-{##}
-{#    </div>#}
-{#    <button class="w-100 btn btn-lg btn-primary" type="submit" value="Submit">Зарегистрироваться</button>#}
-{##}
-{#  </form>#}
-{#</main>#}
   </body>
 </html>
