Override default "Field is required" message

--- a/esl_portal/esl_app/templates/esl_app/register.html
+++ b/esl_portal/esl_app/templates/esl_app/register.html
@@ -22,7 +22,10 @@
               <input type="email" class="form-control" id="floatingInput {{ user_form.email.id_for_label }}" placeholder="name@example.com" name="{{ user_form.email.html_name }}">
               <label for="{{ user_form.email.id_for_label }}">{{ user_form.email.label }}</label>
                 {% if user_form.email.errors %}
-                    <p>Некорректный формат адреса электронной почты</p>
+                    {% for error in user_form.email.errors %}
+                        <p class="fs-6 text-danger">{{ error }}</p>
+                    {% endfor %}
+
                 {% endif %}
             </div>
           <div class="form-floating mb-2">
