--- a/esl_portal/esl_app/templates/esl_app/register.html
+++ b/esl_portal/esl_app/templates/esl_app/register.html
@@ -23,9 +23,8 @@
               <label for="{{ user_form.email.id_for_label }}">{{ user_form.email.label }}</label>
                 {% if user_form.email.errors %}
                     {% for error in user_form.email.errors %}
-                        <p class="fs-6 text-danger">{{ error }}</p>
+                        <p class="fs-6 text-danger mt-1">{{ error }}</p>
                     {% endfor %}
-
                 {% endif %}
             </div>
           <div class="form-floating mb-2">
@@ -33,7 +32,7 @@
               <label for="{{ user_form.username.id_for_label }}">{{ user_form.username.label }}</label>
                 {% if user_form.username.errors %}
                     {% for error in user_form.username.errors %}
-                        <p>{{ error }}</p>
+                        <p class="fs-6 text-danger">{{ error }}</p>
                     {% endfor %}
                 {% endif %}
             </div>
@@ -42,7 +41,7 @@
               <label for="{{ user_form.first_name.id_for_label }}">{{ user_form.first_name.label }}</label>
                 {% if user_form.first_name.errors %}
                     {% for error in user_form.first_name.errors %}
-                        <p>{{ error }}</p>
+                        <p class="fs-6 text-danger">{{ error }}</p>
                     {% endfor %}
                 {% endif %}
             </div>
@@ -51,7 +50,7 @@
               <label for="{{ user_form.password.id_for_label }}">{{ user_form.password.label }}</label>
                 {% if user_form.password.errors %}
                     {% for error in user_form.password.errors %}
-                        <p>{{ error }}</p>
+                        <p class="fs-6 text-danger">{{ error }}</p>
                     {% endfor %}
                 {% endif %}
             </div>
@@ -60,7 +59,7 @@
               <label for="{{ user_form.password2.id_for_label }}">{{ user_form.password2.label }}</label>
                 {% if user_form.password2.errors %}
                     {% for error in user_form.password2.errors %}
-                        <p>{{ error }}</p>
+                        <p class="fs-6 text-danger">{{ error }}</p>
                     {% endfor %}
                 {% endif %}
             </div>
