--- a/esl_portal/esl_app/templates/esl_app/profile.html
+++ b/esl_portal/esl_app/templates/esl_app/profile.html
@@ -17,6 +17,8 @@
             <div class="d-grid gap-2">
                 <a role="button" class="btn btn-primary mb-2" href="{% url 'completed' %}">Пройденные тесты</a>
                 <a role="button" class="btn btn-outline-primary mb-2" href="{% url 'options' %}">Изменить данные</a>
+                <a role="button" class="btn btn-primary mb-2" href="{% url 'tests' %}">Пройти тесты</a>
+                <a role="button" class="btn btn-outline-primary mb-2" href="{% url 'logout' %}">Выйти</a>
                 <a role="button" class="btn btn-link" href="{% url 'main' %}">Вернуться на главную</a>
             </div>
         </main>
