--- a/esl_portal/esl_app/templates/esl_app/register.html
+++ b/esl_portal/esl_app/templates/esl_app/register.html
@@ -63,6 +63,9 @@
                     {% endfor %}
                 {% endif %}
             </div>
+          <div class="form-text mb-2">
+                    Пароль должен содержать: буквы латинского алфавита, цифры и спецсимволы
+          </div>
             <button class="w-100 btn btn-lg btn-primary" type="submit">Регистрация</button>
             <div class="container mt-3">
                 <a class="text-info" href="{% url 'main' %}">Вернуться на главную</a>
