Add forgot button

--- a/esl_portal/esl_app/templates/esl_app/login.html
+++ b/esl_portal/esl_app/templates/esl_app/login.html
@@ -37,6 +37,7 @@
             </div>
           {% endif %}
       </form>
+    <a role="button" class="btn btn-lg btn-outline-primary mt-3" href="{% url 'forgot' %}">Забыли пароль?</a>
     </main>
   </body>
 </html>
