--- a/esl_portal/esl_app/templates/esl_app/completed.html
+++ b/esl_portal/esl_app/templates/esl_app/completed.html
@@ -48,11 +48,11 @@
         {% for completion in completions %}
             <div class="row border rounded mx-5 my-3 completion align-self-center shadow-sm">
                 <div class="col-10">
-                    <h2 class="mt-1">{{ completion.test.test_name }}</h2>
-                    <h3>{{ completion.num_of_correct }} из {{ completion.test.questions.count }}</h3>
+                    <h2 class="mt-1 fw-normal">{{ completion.test.test_name }}</h2>
+                    <h3 class="fw-normal">Последний результат: {{ completion.num_of_correct }} правильных ответа из {{ completion.test.questions.count }}</h3>
                 </div>
                 <div class="col-2 text-center align-items-center">
-                    <a role="button" class="btn btn-dark btn-outline-light mt-4 restart-button" href="{% url 'test' test_id=completion.test_id %}">Перепройти</a>
+                    <a role="button" class="btn btn-primary btn-outline-light mt-4 restart-button" href="{% url 'test' test_id=completion.test_id %}">Перепройти</a>
                 </div>
             </div>
         {% endfor %}
